testsuite/escript/classes/fail-scopes-var-undefined-02.err
fail-scopes-var-undefined-02.src:8:1: error: Unknown identifier 'Animal::variable'.