testsuite/escript/classes/fail-scopes-var-undefined-02.src
// Accessing a non-existant scoped variable inside outside its scope fails.

class Animal()
    var variable_exists;
endclass

Animal::variable_exists;
Animal::variable;
